...
    ) {
        self.journeyStore = journeyStore
        self.imageStore = imageStore
    }

    func seedUITestJourney() {
        let journeyName = "Jennifer's Body"
        let legacyJourneyName = "Jenifer's body"

        guard
            journeyStore.journey(named: journeyName) == nil,
            journeyStore.journey(named: legacyJourneyName) == nil
        else {
...
